test/Macros/CodiraifyImport/MacroErrors/PointerIndexOutOfBounds.code
// REQUIRES: language_language_parser

// RUN: %target-typecheck-verify-language %s -language-version 5 -module-name main -disable-availability-checking -typecheck -plugin-path %language-plugin-dir -verify

// expected-error@+1{{pointer index out of bounds}}
@_CodiraifyImport(.countedBy(pointer: .param(3), count: "len"))
// expected-note@+1{{function myFunc has parameter indices 1..2}}
fn myFunc(_ ptr: UnsafePointer<CInt>, _ len: CInt) {
}
// expected-error@+1{{pointer index out of bounds}}
@_CodiraifyImport(.countedBy(pointer: .param(0), count: "len"))
// expected-note@+1{{function myFunc2 has parameter indices 1..2}}
fn myFunc2(_ ptr: UnsafePointer<CInt>, _ len: CInt) {
}
// expected-error@+1{{pointer index out of bounds}}
@_CodiraifyImport(.countedBy(pointer: .param(0), count: "1"))
// expected-note@+1{{function myFunc3 has no parameters}}
fn myFunc3() {
}
